# glowbridge-agent-ops

./: .env.example  .gitignore  Dockerfile  GO_LIVE.md  README.md  docker-compose.yml  pyproject.toml  railway.json
app/: __init__.py  config.py  db.py  llm.py  logging_setup.py  main.py  safety.py  scheduler.py
app/agents/: base.py  customer.py  customer_agent.py  digest.py  followup.py  outreach.py  outreach_agent.py  prospect.py  prospect_agent.py  reply.py  reply_agent.py  research.py  research_agent.py  social.py  social_agent.py
app/api/: routes.py
app/core/: config.py  logging.py
app/db/: supabase_client.py
app/integrations/: browser_automation.py  browserbase.py  buffer.py  fetch.py  gmail.py  gmail_client.py  search.py  stripe_handler.py  stripe_wh.py  vapi.py
app/jobs/: scheduler.py
app/routers/: admin.py  approvals.py  auth_dep.py  public.py  runs.py  webhooks.py
app/services/: repository.py
app/templates/: admin.html
scripts/: gmail_oauth.py  test_stripe_webhook.py
supabase/: schema.sql
supabase/migrations/: 002_vapi.sql
tests/: test_buffer_integration.py  test_db_helpers.py  test_digest.py  test_followup.py  test_outreach_budget.py  test_public_leads.py  test_reply_bounces.py  test_safety.py  test_vapi_payload.py
