[project]
name = "glowbridge-agent-ops"
version = "0.1.0"
description = "Production-ready agent operations backend for GlowBridge Call Capture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27.0",
  "supabase>=2.5.1",
  "stripe>=10.0.0",
  "google-api-python-client>=2.140.0",
  "google-auth>=2.34.0",
  "google-auth-oauthlib>=1.2.1",
  "apscheduler>=3.10.4",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "openai>=1.42.0",
]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
